--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-  --color-primary: #245c87;
+  --color-primary: #18486c;
   --color-secondary: #fff;
   --color-white: #FFFFFF;
   --color-black: #000;
