added new styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,17 @@
   --color-grey-5: #f8f8f8;
   --color-grey-6: #6db5d8;
 }
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
 
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0); /* Transparent color */
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0); /* Transparent color */
+}
 body {
   background-color: var(--color-primary);
   font-family: 'Nunito', sans-serif;
@@ -689,7 +699,7 @@ section {
   padding: 0 2rem;
 }
 .main-btn .btn-icon {
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -710,7 +720,9 @@ section {
   background-color: var(--color-secondary);
   transform: translateX(0);
   transition: all 0.4s ease-out;
+  color: var(--color-secondary);
 }
+
 
 .main-title {
   text-align: center;
@@ -904,3 +916,155 @@ section {
 .custom-title:hover {
   text-shadow: 0 0 0 dodgerblue;
 }
+.skills-section{
+  padding-top: 20px;
+  }
+   
+  .skills-header{
+  text-align: center;
+  color: #fff;
+  padding: 1rem;
+  position: relative;
+  }
+  .skills-tech{
+    color:#fff;
+  }
+  .skills-header:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 4px;
+  background-color: var(--color-white);
+  border-radius: 2px;
+  }
+  
+  .skills-container{
+  display: grid;
+  grid-tempLate-columns: repeat(5, 1fr);
+  justify-content:center;
+  align-items:center;
+  text-align: center;
+  grid-gap:1rem;
+  padding: 1rem 80px;
+  font-size: 1.2rem;
+  }
+  .skills-box{
+  padding: 1rem;
+  color: #000;
+  cursor:pointer;
+  }
+  .skills-box:hover > .skills-title:after,
+  .skills-box:hover > .skills-title:before {
+    width: 30px;
+  }
+  .skills-box:hover .skills-img{
+  transform: translateX(-20px);
+  }
+  
+  .skills-title{
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  position: relative;
+  }
+  
+  /* .skills-title:after{
+  content: '';
+  position:absolute;
+  bottom: 0;
+  right: 50%;
+  width:20px;
+  height:4px;
+  border-radius: 2px 0 0 2px;
+  background-color: #2ecc71;
+  transition: .5s;
+  } */
+  
+  /* .skills-title:before{
+  content: '';
+  position:absolute;
+  bottom: 0;
+  left: 50%;
+  width:100px;
+  height:4px;
+  border-radius: 0 2px 2px 0;
+  background-color: #2ecc71;
+  } */
+  
+  .skills-icons{
+  width:50px;
+  z-index:2;
+  }
+  
+  .skills-img{
+  width:90px;
+  height:90px;
+  position: relative;
+  border-radius: 45px;
+  background-color: #fff;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  transition: .5s;
+  }
+  
+  .skills-img:after{
+  content: '';
+  position:absolute;
+  top:0;
+  left: 0;
+  width:50%;
+  height:90px;
+  background: rgba(100, 100, 100, 0.5);
+  border-radius: 45px 0 0 45px;
+  }
+  .skills-title h3{
+  color: #fff;
+  margin-top: 0.5rem;
+  }
+  @media screen and (max-width:990px){
+   .skills-container{
+   grid-tempLate-columns: repeat(2, 1fr);
+   padding: 2rem 50px;
+   }
+  }
+  
+  @media screen and (max-width:650px){
+   .skills-container{
+   grid-tempLate-columns:2fr;
+   padding: 2rem 50px;
+   }
+  }
+
+  /* THUMB */
+  .thumb {
+    display: inline-block;
+    background: #f6f8f9;
+    position: relative;
+    margin: 0 10px 10px 0;
+    border-radius: 3px;
+    transition: all 0.2s ease-in-out;
+  }
+  .thumb:before {
+    content:'';
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 3px;
+  }
+  .thumb img { 
+    display: block; 
+    border-radius: 3px;
+  }
+  .thumb:hover:before { 
+     box-shadow: 0 0 5px #81bce3;
+     border: 1px solid rgba(0,0,0,0.4);
+  }
